--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "homepage": "https://github.com/reyphilipregis/stock-watcher",
   "authors": [
     "Rey Philip Regis <reyphilipregis@gmail.com>"
+    "Carter Binarao <retrac418@gmail.com>"
   ],
   "license": "MIT",
   "ignore": [
